--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,22 @@ plugins {
     alias(libs.plugins.jetbrains.kotlin.android)
 }
 
+//allprojects {
+//    repositories {
+//        mavenCentral()
+//        google()
+//        maven { url 'https://jitpack.io' }
+//    }
+//}
+
 android {
     namespace 'com.example.logging'
     compileSdk 34
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
 
     buildFeatures {
         viewBinding true
@@ -29,13 +42,16 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            testCoverageEnabled true
+        }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     testOptions {
@@ -50,9 +66,15 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
+    implementation libs.core.ktx
+    implementation libs.androidx.activity.ktx
+//    implementation project(':flutter')
+    testImplementation libs.mockitokotlin2.mockito.kotlin
     testImplementation libs.junit
     testImplementation libs.junit.jupiter
     testImplementation libs.mockito.core
+    testImplementation libs.org.jacoco.core
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+    androidTestImplementation libs.mockito.android
 }
