--- a/settings.gradle
+++ b/settings.gradle
@@ -11,14 +11,7 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
-//dependencyResolutionManagement {
-//    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
-//    repositories {
-//        google()
-//        mavenCentral()
-//        maven { url 'https://jitpack.io' }
-//    }
-//}
+
 
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
@@ -33,14 +26,14 @@ dependencyResolutionManagement {
 rootProject.name = "Logging"
 include ':app'
 
-include ':logging_flutter'
-project(':logging_flutter').projectDir = new File(
-        settingsDir.parentFile,
-        'logging_flutter'
-)
-
-setBinding(new Binding([gradle: this]))
-evaluate(new File(
-        settingsDir.parentFile,
-        'logging_flutter/.android/include_flutter.groovy'
-))
+//include ':logging_flutter'
+//project(':logging_flutter').projectDir = new File(
+//        settingsDir.parentFile,
+//        'logging_flutter'
+//)
+//
+//setBinding(new Binding([gradle: this]))
+//evaluate(new File(
+//        settingsDir.parentFile,
+//        'logging_flutter/.android/include_flutter.groovy'
+//))
