--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     implementation libs.material
     implementation libs.core.ktx
     implementation libs.androidx.activity.ktx
-//    implementation project(':flutter')
+    implementation project(':flutter')
     testImplementation libs.mockitokotlin2.mockito.kotlin
     testImplementation libs.junit
     testImplementation libs.junit.jupiter
@@ -78,5 +78,4 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
     androidTestImplementation libs.mockito.android
-    testImplementation 'org.mockito:mockito-junit-jupiter:3.11.2'
 }
